<resources>
    <string name="app_name">My Tea State</string>
    <string name="action_settings">Settings</string>

    <string name="perm_Emp">Perm Emp</string>
    <string name="Cont_Emp">Cont Emp</string>
    <string name="Leaves">Leaves</string>
    <string name="Food">Food</string>
    <string name="FullDay">Full Day</string>
    <string name="HalfDay">Half Day</string>
    <string name="Transport">Transport</string>
    <string name="Fertilizer">Fertilizer</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_perm__emp">Perm_Emp</string>
    <string name="title_activity_cont__emp">Cont_Emp</string>
    <string name="title_activity_leaves">Leaves</string>
    <string name="title_activity_transport">Transport</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_fertilizer">Fertilizer</string>


    <string name="textview1">Unit</string>
    <string name="textview2">textview2</string>
    <string name="button">button</string>
    <string name="spinner_title">Emp Type</string>
    <string name="button11">button</string>
    <string name="textview4">Count</string>
    <string name="textview3">Emp Type</string>
    <string name="Hours">Hours</string>
    <string name="unit">Unit</string>
    <string name="halfday">Half Day</string>
    <string name="fullfday">Full Day</string>


</resources>
